--- a/_posts/design/2019-11-20-kickoff.md
+++ b/_posts/design/2019-11-20-kickoff.md
@@ -13,12 +13,11 @@ header: no
 ---
 The kick-off meeting with all partners present took place on November 20, 2019, at the premises of the CD-Lab at the TU Wien, Vienna.
 
+
+<!--
 ~~~
 header: no
 ~~~
-
-
 ### All Header-Styles
 {: .t60 }
-
-<!--{% include list-posts tag='header' %}-->
+{% include list-posts tag='header' %}-->
