--- a/_drafts/2015-08-11-no-header.md
+++ b/_drafts/2015-08-11-no-header.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-subheadline:  "...and it works"
-title:  "We have a page"
-teaser: "Yay we habe a homepage"
+subheadline:  "Headers With Style"
+title:  "No Header"
+teaser: "Feeling Responsive allows you to use all kinds of headers. This example shows <em>no</em> header at all. Just the navigation."
 categories:
     - design
 tags:
@@ -11,17 +11,15 @@ tags:
     - header
 header: no
 ---
-
 *Silence is beautiful.* Sometimes you just want no distractions at all. Whether you like the content to speak for itself or enjoy pure typography on a plain background: *Feeling Responsive* got you covered. Just say *no* like this:
+<!--more-->
 
-
-
-<!--more
 ~~~
 header: no
 ~~~
+
+
 ### All Header-Styles
 {: .t60 }
 
 {% include list-posts tag='header' %}
--->
